<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.TaskDetailActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/taskNameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textSize="25sp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body"
        android:textSize="30sp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/taskBodyTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_body"
        android:textSize="25sp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textSize="30sp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/taskStateTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_state"
        android:textSize="25sp"
        android:layout_marginTop="16dp" />

</LinearLayout>
