<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    tools:layout_editor_absoluteX="159dp"
    tools:layout_editor_absoluteY="2dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="32dp"
        android:text="@string/my_tasks"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/allTasksbtn"
        android:layout_width="112dp"
        android:layout_height="62dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:text="@string/all_tasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskbtn" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="112dp"
        android:layout_height="62dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="24dp"
        android:text="@string/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allTasksbtn" />

    <Button
        android:id="@+id/addTaskbtn"
        android:layout_width="112dp"
        android:layout_height="62dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="52dp"
        android:text="@string/add_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTxt" />

    <TextView
        android:id="@+id/usernameTxt"
        android:layout_width="374dp"
        android:layout_height="64dp"
        android:layout_marginStart="21dp"
        android:text="@string/nothing"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskListRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskListRecyclerView"
        android:layout_width="359dp"
        android:layout_height="239dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>