<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas android.com/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:id="@+id/addTaskActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddTaskActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/add_task"
        android:textSize="27sp" />

    <EditText
        android:id="@+id/taskTitleEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Task Title"
        android:hint="@string/task_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/taskBodyEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Task Description"
        android:hint="@string/task_description"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/addTaskCategorySpinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/addTaskTeamNameSpinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1" />

    </LinearLayout>


    <ImageView
        android:id="@+id/addTaskImageImageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools2:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayoutForButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addTaskAddImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="Add Image" />

        <Button
            android:id="@+id/addTaskDeleteImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:text="Delete Image" />

    </LinearLayout>

    <Button
        android:id="@+id/addTaskToTotalbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/add_task" />

    <Button
        android:id="@+id/backbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/back" />

</LinearLayout>
